Feat : Create view for Profil Form Edit & New

--- a/templates/profil/profilform.html.twig
+++ b/templates/profil/profilform.html.twig
@@ -4,67 +4,166 @@
 
 {% block page_contents %}
 
- <!-- PARTIE CENTRALE-->
-   Edition d'un profil
-<div class="ml-72">
-    {{ form_start(profil) }}
-    <div class="image overflow-hidden my-4 max-w-xs ">
-        <img class="h-auto w-full mx-auto"
-             src="{{ form_row(profil.picture) }}"
-             alt="">
-    </div>
-    <div class="px-4 py-2 font-semibold">
-        <p class="inline text-sm text-gray-500 hover:text-gray-600 leading-6">Nom de famille : {{ form_widget(profil.firstname) }}</p>
-        <p class="inline text-sm text-gray-500 hover:text-gray-600 leading-6">Prénom : {{ form_widget(profil.lastname) }}</p>
-    </div>
+    <!-- !Partie centrale-->
+    <div class="fixed flex flex-col h-full w-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white overflow-auto">
 
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Anniversaire</div>
-        <div class="px-4 py-2">{{ form_widget(profil.dateOfBirth) }}</div>
-    </div>
+        <!-- Title -->
+        <div class="pl-24 py-14 pt-20">
+            <h1 class="text-6xl">
+                {% if user.id is null %}
+                Ajout d'un nouveau salarié
+                {% else %}
+                Edition du profil
+                {% endif %}
+            </h1>
+        </div>
+        <!-- BLOCK START-->
+        <div class="md:flex no-wrap px-10 sm:max-w-max sm:mr-2">
+            <!-- Left Side -->
+            <div class="md:mx-2">
 
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Email privé</div>
-        <div class="px-4 py-2">
-            <a class="text-blue-800" href="mailto:jane@example.com">{{ form_widget(profil.email) }}</a>
+                <!-- Profil Card -->
+
+                <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-green-500">
+                    <div class="image overflow-hidden my-4 max-w-xs ">
+                        <img class="h-auto w-full mx-auto"
+                             src="{{ user.picture ?? null }}"
+                             alt="">
+                    </div>
+                    <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">{{ user.firstname ?? null}} {{ user.lastname ?? null}}</h1>
+                    <h3 class="text-gray-600 font-lg text-semibold leading-6">{{ user.job.name ?? null}}</h3>
+                    <p class="text-sm text-gray-500 hover:text-gray-600 leading-6">Département : {{ user.departement.name ?? null}}</p>
+                    <ul
+                            class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm">
+                        <li class="flex items-center py-3">
+                            <span>Status</span>
+                            <span class="ml-auto">
+                            {% if user.status %}
+                                <span class="bg-green-500 py-2 px-4 rounded text-white text-sm"> Actif </span>
+                            {% else %}
+                                <span class="bg-red-700 py-2 px-4 rounded text-white text-sm"> Inactif </span>
+                            {% endif %}</span>
+                        </li>
+                        <li class="flex items-center py-3">
+                            <span>Employé depuis</span>
+                            <span class="ml-auto">{{ user.createdat | date("d/m/Y") }}</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- End Profile Card -->
+                <div class="my-4"></div>
+            </div>
+            <!-- Right Side -->
+            <div class="max-w-max w-full ">
+
+                <!-- Section A propos-->
+
+                <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-green-500">
+                    {{ form_start(profil) }}
+                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 my-4">
+                    <span class="text-green-500">
+                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                        </svg>
+                    </span>
+                        <span class="tracking-wide">A propos</span>
+                    </div>
+
+                    <div class="text-gray-700">
+                        <div class="grid md:grid-cols-2 text-sm">
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2 ">
+                                <div class="px-4 py-2 font-semibold">Prénom : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.firstname) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Nom : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.lastname) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Password : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.password) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Confirmation du mot de passe : </div>
+                                <div class="px-4 py-2 font-semibold">
+                                    <input type="password" name="confirm_password">
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Photo : </div>
+                                <input class="px-4 py-2" type="file"/>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Anniversaire</div>
+                                <div class="px-4 py-2 ">{{ form_widget(profil.dateOfBirth) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Téléphone privé</div>
+                                <div class="px-4 py-2">{{ form_widget(profil.phonenumberpro) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Téléphone professionnel</div>
+                                <div class="px-4 py-2">{{ form_widget(profil.phonenumber) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Email privé</div>
+                                <div class="px-4 py-2">
+                                    <a class="text-blue-800" href="mailto:jane@example.com">{{ form_widget(profil.emailpro) }}</a>
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Email pro</div>
+                                <div class="px-4 py-2">
+                                    <a class="text-blue-800" href="mailto:jane@example.com">{{ form_widget(profil.email) }}</a>
+                                </div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Adresse</div>
+                                <div class="px-4 py-2">{{ form_widget(profil.address) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Code postal : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.zipcode) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Ville : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.city) }}</div>
+                            </div>
+
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">RIB : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.rib) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Status : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.status) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Rôle : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.role) }}</div>
+                            </div>
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Job : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.job) }}</div>
+                            </div>
+
+                            <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                                <div class="px-4 py-2 font-semibold">Département : </div>
+                                <div class="px-4 py-2">{{ form_widget(profil.departement) }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    {#  <a class="bg-blue-500 text-white px-16 py-3 rounded-md text-1xl font-medium hover:bg-blue-700 transition duration-300" href="">Modifier mon mot de passe</a>#}
+                    <button class="bg-blue-500 text-white px-16 py-3 rounded-md text-1xl font-medium hover:bg-blue-700 transition duration-300">Enregistrer</button>
+
+                </div>
+
+                {{ form_end(profil) }}
+                <!-- Fin section A propos -->
+                <div class="my-4"></div>
+            </div>
         </div>
     </div>
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Email pro</div>
-        <div class="px-4 py-2">
-            <a class="text-blue-800" href="mailto:jane@example.com">{{ form_widget(profil.emailpro) }}</a>
-        </div>
-    </div>
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">RIB : </div>
-        <div class="px-4 py-2">{{ form_widget(profil.rib) }}</div>
-    </div>
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Téléphone personnel</div>
-        <div class="px-4 py-2">{{ form_widget(profil.phonenumber) }}</div>
-    </div>
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Téléphone professionnel</div>
-        <div class="px-4 py-2">{{ form_widget(profil.phonenumberpro) }}</div>
-    </div>
-
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Adresse</div>
-        <div class="px-4 py-2">{{ form_widget(profil.address) }}</div>
-    </div>
-    <div class="grid grid-cols-2 border-b border-slate-200 py-2">
-        <div class="px-4 py-2 font-semibold text-center">Code postal et ville</div>
-        <div class="px-4 py-2">{{ form_widget(profil.zipcode) }} {{ form_widget(profil.city) }}</div>
-    </div>
-
-    password : {{ form_widget(profil.password) }}
-    <div class="px-4 py-2 font-semibold">
-        <p class="inline text-sm text-gray-500 hover:text-gray-600 leading-6 text-center">Département : {{ form_widget(profil.status)}}</p>
-        <p class="inline text-sm text-gray-500 hover:text-gray-600 leading-6 text-center">Rôle : {{ form_widget(profil.role) }}</p>
-        <p class="inline text-sm text-gray-500 hover:text-gray-600 leading-6 text-center">Job : {{ form_widget(profil.job) }}</p>
-    </div>
-    <a href="">Modification mot de passe </a>
-    <button>Enregistrer</button>
-    {{ form_end(profil) }}
-</div>
 {% endblock %}
