--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -25,7 +25,7 @@
                         src="{{ user.picture}}"
                         alt="">
                 </div>
-                <h1 class="text-gray-900 dark:text-white font-bold text-xl leading-8 my-1">{{ user.firstname}} {{ user.lastname}}</h1>
+                <h1 class="text-gray-900 dark:text-white font-bold text-xl leading-8 my-1">{{ user.fullname}} </h1>
                 <h3 class="text-gray-600 dark:text-white font-lg text-semibold leading-6">{{ user.job.name}}</h3>
                 <p class="text-sm dark:text-white text-gray-500 leading-6">Département : {{ user.departement.name}}</p>
                 <ul
