--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -206,7 +206,7 @@
       <ul class="flex flex-col py-4 space-y-2">
           <!-- Firstname / Lastname -->
           <li>
-            <p class="ml-2 text-lg font-semibold tracking-wide truncate">{{app.user.lastname}} {{app.user.firstname}}</p>
+            <p class="ml-2 text-lg font-semibold tracking-wide truncate">{{app.user.fullname}} </p>
           </li>
 
           <!-- Info user (email ? job / departement ?)-->
