--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -10,8 +10,12 @@
     <div class="w-[75rem]">
         <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
+        {% if totalHoursWeek != null %}
             <p class="text-4xl">Mon planning</p>
-            <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p>    
+            <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p> 
+        {% else %}
+            <p class="text-4xl">Vous n'avez pas encore de planning, veuillez vous rapprochez de votre <a class="max-w-fit text-blue-600 font-semibold hover:text-white " href="{{ path('profil_id', {'id' : dptManager['id']}) }}">responsable</a></p>
+        {% endif %}
         </div>
 
         <!-- Start TABLE -->        
