--- a/templates/documentation/index.html.twig
+++ b/templates/documentation/index.html.twig
@@ -1,37 +1,64 @@
-{% extends 'base.html.twig' %}
+{% extends 'sidebar.html.twig' %}
 
-{% block title %}Hello DocsRHController!{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-   {% for payslip in user.payslips %}
-       
-   <h1>Hello {{ payslip.link }}! ✅</h1>
-       
-   {% endfor %}
+{% block page_contents %}
+
+<!-- Partie centrale -->
+<div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white w-full pl-24 py-14 pt-24">
+
+
+    <p class="text-4xl py-2 ">Mes Documents</p>
+    
+    <p class="text-2xl py-2 ">Fiches de paie</p>
+     {% for payslip in user.payslips %}
+     <a href="{{ payslip.link }}" download> Fiche de Paie {{payslip.createdAt|format_datetime('short', 'none', locale='fr')}}</a>
+    {% endfor %}
 
     
-    {% for documentation in user.documentations %}
-       
-   <h1>Hello {{ documentation.link }}! ✅</h1>
-   
-       
-   {% endfor %}
+      <p class="text-2xl py-2">Documentation de l'entreprise</p>
+      {% for documentation in user.documentations %}
+     <a href="{{ documentation.link }}" download> Document Interne {{documentation.createdAt|format_datetime('short', 'none', locale='fr')}}</a>
+        {% endfor %}
 
+     
+      <p class="text-2xl py-2">Réglement Intérieur</p>
+     
+     
+      <div class= "flex flex-row items-center">
+      <a href="{{asset ('r__glement_int__rieur_quickwork.pdf')}}">Réglement Intérieur 2022</a>
+      
+      <a href="{{asset ('r__glement_int__rieur_quickwork.pdf')}}" download>
+        <svg xmlns="http://www.w3.org/2000/svg" 
+        width ="40"
+        height = "40"
+        className="h-6 w-6" 
+        fill="none" 
+        viewBox="0 0 25 25" 
+        stroke="currentColor" 
+        strokeWidth={2}>
+          <path 
+          strokeLinecap="round" 
+          strokeLinejoin="round" 
+          d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" 
+          />
+        </svg>
+      </a>
+    </div>
 
+ 
+     
+    <p class="text-2xl py-2">Contrat</p>
+      {% for contrat in user.contracts %}
+     <a href="{{ contrat.link }}" download> Contrat {{contrat.createdAt|format_datetime('short', 'none', locale='fr')}}</a>
+        {% endfor %}
 
-    <h1>Hello {{ user.fullname }}! ✅</h1>
-       
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/QuickWork/projet-21-quick-work/src/Controller/DocsRHController.php'|file_link(0) }}">src/Controller/DocsRHController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/QuickWork/projet-21-quick-work/templates/docs_rh/index.html.twig'|file_link(0) }}">templates/docs_rh/index.html.twig</a></code></li>
-    </ul>
+    
 </div>
+
+
+</body>
+</html>
 {% endblock %}
+
+
