--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -68,7 +68,7 @@
 
     <!-- DOCUMENTATION RH -->
       <li>
-        <a href="#" class="flex justify-start items-center 
+        <a href="{{ path("documentation") }}" class="flex justify-start items-center 
                                 group                             
                                 rounded                                     
                                 border-transparent 
@@ -86,7 +86,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
             </svg>
           </span>
-          <span class="ml-2 text-base tracking-wide truncate">Documentation RH</span>
+          <span class="ml-2 text-base tracking-wide truncate">Mes Documents</span>
         </a>
       </li>
 
