--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -132,9 +132,9 @@
                                 relative flex-row h-11 focus:outline-none
                                 py-4">
           <span class="inline-flex justify-center items-center">
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            <svg fill="none" viewBox="0 0 20 20" stroke="currentColor"
                  class="h-10 w-10 text-blue-500 group-hover:stroke-white group-focus:stroke-white inline-flex justify-center items-center">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
             </svg>
           </span>
           <span class="ml-2 text-base tracking-wide truncate">Gestion Equipe</span>
