--- a/templates/management_rh/index.html.twig
+++ b/templates/management_rh/index.html.twig
@@ -25,7 +25,7 @@
 
     <!-- Nouveau salarié -->
     <div class="pl-24">
-        <a href="{{ path("profil_new") }}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau planning</a>
+        <a href="{{ path("profil_new") }}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau salarié</a>
     </div>
 
     <!-- Cards Departement -->
