--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -8,12 +8,12 @@
 <div class="fixed flex flex-col h-full w-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white overflow-auto">
 
   <!-- Title (accueil) -->
-  <div class="pl-24 py-14 pt-24">
+  <div class="pl-24 pt-24">
       <p class="text-4xl">Planning du département :</p>
       <p class="text-2xl indent-8">{{userLogged.departement.name}}</p>
   </div>
   <div class="pl-24">
-    <a href="{{ path('planned_work_days_new')}}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau planning</a>
+    <a href="{{ path('planned_work_days_new')}}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 mt-5 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau planning</a>
   </div>
 
 
