--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -16,3 +16,16 @@
 .buttonLoginValidate {
     @apply my-2 w-52 h-10 rounded-md font-bold text-white bg-blue-900 hover:bg-gradient-to-r from-indigo-900 via-teal-600 to-green-400 hover:scale-110 ease-in-out duration-300
 }
+
+/* Compoenents for templates /home/index.html.twig */
+.buttonPointageAnimated {
+    @apply bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium animate-pulse cursor-pointer
+}
+
+.buttonPointageLocked {
+    @apply bg-gradient-to-tl from-green-400 to-indigo-900 shadow-lg rounded-md flex items-center p-3 border-b-4 border-green-600  text-white font-medium
+}
+
+.buttonPointageDisabled {
+    @apply bg-slate-300 shadow-lg rounded-md flex items-center  p-3 border-b-4 border-slate-400  text-white font-medium
+}
