--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,6 +37,24 @@
 ]
  #}
 
+{% if userPlannedThisDay == false %}
+  <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
+
+    <div class="flex absolute h-10 w-10 m-2">
+        <span class="animate-ping absolute inline-flex h-full w-full rounded-full ">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+          </svg>
+        </span>
+        <span class="relative inline-flex rounded-full h-4 w-4 "></span>
+    </div>
+    <div class="m-2">
+    <p>Vous ne pouvez pas déclarer votre journée en raison d'un manque de plannification ce jour.</p>
+    <p>Veuillez vous rapprocher de votre responsable.</p>
+    </div>
+  </div>
+
+{% else %}
 <div class="grid md:grid-cols-2 md:w-[40rem] lg:grid-cols-2 lg:w-[40rem] xl:grid-cols-4 xl:w-[60rem] p-4 gap-4 m-16">
 
   <div id="startLog">
@@ -122,19 +140,15 @@
   </div>
 
 </div>
+{% endif %}
+
 
   <!-- Zone d'espacement-->
   <div class="h-full bg-transparent">
   </div>
     
   <!-- Zone d'information-->
-  <div class="w-2/3 text-center m-auto h-auto dark:bg-white dark:bg-opacity-10 rounded-lg border border-slate-500">
-
-    <span class="flex absolute h-4 w-4 -mt-2">
-      <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"></span>
-      <span class="relative inline-flex rounded-full h-4 w-4 bg-sky-500"></span>
-    </span>
-
+  <div class="w-2/3 text-center m-16 px-10 py-6 h-auto dark:bg-slate-900 rounded-lg border border-slate-500">
     <h1 class="text-xl leading-6 pt-8 font-semibold">Communication entreprise</h1>
     <p class="text-xl px-8 m-4 text-justify">Nous organisons pour le vendredi 18 mars 2022 un dîner d'entreprise. Tout le monde sera le bienvenue ! Au menu : apéro dînatoire et cocktails à volonté.</p>
   </div>
